--- a/styles.css
+++ b/styles.css
@@ -5,45 +5,27 @@
     box-sizing: border-box;
 }
 
-.img-nombre {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    
-}
-
-img {
-    height: 70px;
-    width: 70px;
+.header img {
+    height: 40px;
+    width: 40px;
     margin: 0px 10px;
+    border-radius: 15px;
 }
 
-.nombre-logo {
-    color: gray;
-    padding: 0px 0px 0px 20px;
-    font-size: 18px;
-    font-style: italic;
-    font-weight: 900;
-    font-family: 'Michroma', sans-serif;
-}
-
-header {
+.header {
     height: 90px;
     width: 100%;
     padding: 0px 45px;
-    background-color: rgb(22, 99, 138);
-    box-shadow: rgb(22, 99, 138) 0px 8px 24px;
+    background: linear-gradient(rgb(22, 99, 138), rgb(14, 54, 101) );
+    box-shadow: black 0px 2px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center; 
     position: fixed;
     top: 0;
-
 }
 
-
- nav ul{
+nav ul{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,14 +33,78 @@ header {
     list-style: none;
 }
 
-
 .a-lis-nav{
-    color: rgb(197, 227, 229);
-    font-weight: 300;
+    color: rgb(250, 254, 254);
+    font-weight: 200;
     text-decoration: none;
 }
 
+.div-h1-p h1 {
+    color: rgb(75, 74, 74);
+    padding: 0px 0px 0px 20px;
+    font-size: 30px;
+    font-weight: 900;
+    font-family: 'Michroma', sans-serif;
+    padding:  30px;
+
+}
 
 body { 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: rgb(14, 54, 101);
+}
+
+.section-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 80px;
+}
+
+.section-1 img {
+    height: 300px;
+    border-radius: 10px;
+}
+
+main {
+    margin: 150px 50px 50px 80px;
+}
+
+.div-h1-p p {
+    color: darkgrey;
+    max-width: 600px;
+    font-weight: 700;
+ }
+
+.h1-p-span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+}
+
+.reserv-punt {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 0px 100px;
+    list-style: none;
+}
+
+.reserv-punt a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(2, 189, 252);
+    width: 130px;
+    height: 35px;
+    font-size: 18px;
+    font-weight: 900;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-2 {
+    margin: 100px;
 }
